<resources>
    <string name="app_name">MobileProgrammingApp1</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="label_name">Name</string>
    <string name="label_phone">Phone</string>
    <string name="label_address">Address</string>
    <string name="privacy_content">"kmupjh operates the kmupjh.com website, which provides the SERVICE.
This page is used to inform website visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service, the kmupjh website.
If you choose to use our Service, then you agree to the collection and use of information in relation with this policy. The Personal Information that we collect are used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy."</string>
    <string name="privacy_agree">Agree</string>
    <string name="privacy_disagree">Disagree</string>
    <string name="label_privacy">Privacy Policy</string>
    <string name="action_submit">Submit</string>
    <string name="error_username_empty">Enter Username</string>
    <string name="error_login_incorrect">Incorrent Username or Password</string>
    <string name="error_password_empty">Enter Password</string>
    <string name="error_password_short">At least 6 characters</string>
    <string name="dialog_title_login_incorrent">Login Failed</string>
    <string name="action_ok">OK</string>
    <string name="db_name">login_db</string>
    <string name="error_privacy">Check \"Agree\" to Registration</string>
    <string name="error_username_in_use">Username already in use</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">Tic-Tac-Toe</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_logout">Logout</string>
</resources>
