<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_username"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:hint="@string/label_username"
        android:autofillHints="username"
        android:inputType="textVisiblePassword|textNoSuggestions" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/login_username"
        android:layout_marginTop="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:hint="@string/label_password"
        android:autofillHints="password"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/login_password"
        android:layout_marginTop="96dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/action_login" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_register"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/button_login"
        android:layout_marginTop="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:text="@string/action_register" />


</RelativeLayout>
